css/main.css
@import url("https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css");
@import url("https://fonts.googleapis.com/css?family=Raleway:400,300");
@import url("https://fonts.googleapis.com/css?family=Lato:400,300,300italic");

body {
	background-color: black;
	color: white;
	padding-top: 0px;
	margin: 0px;
	font-family: Lato, 'Helvetica Neue', Helvetica, sans-serif;
	font-size: 18px;
}

h1, h2, h3, h4, h5, h6 {
	font-family: Raleway, 'Helvetica Neue', Helvetica, sans-serif;
	font-weight: bold;
}

#topper {
	background-color: #302f2f;
	margin-top: 0px;
	padding: .25em;
	width: 100vw;
	padding-left: 2em;
	/*font-variant: small-caps;*/
}

#artistBio {
	margin-top: 2em;
	margin-bottom: 1em;
	padding-bottom: 2em;
}

#artistBio .container {
	margin-bottom: 2em;
	border-radius: 10px;
}

#artistBio .container > div {
	margin-top: 2em;
	margin-bottom: 2em;
	background-color: #292828;
	padding: 1em;
	border-radius: 10px;
	border-style: solid;
    border-color: #23CF5F;
}

#container {
    height: 500px; 
    min-width: 310px; 
    max-width: 800px; 
    margin: 0 auto; 
}

#pickCountry, #button, #play {
	text-align: center;
}

#personName {
	text-align: center;
	margin-bottom: 1em;
}

#button {
	margin-top: 1em;
	margin-bottom: 5em;
}

#countryInfo {
	padding-right: 20px;
}

.bioBody {
	margin-left: 2em;
}

a:hover {
	cursor:pointer;
	color: orange;
	text-decoration: none;
}

a {
	color: lightblue;
	text-decoration: none;
}

.row {
	background-color: #302f2f;
	padding-top: 3em;
	padding-bottom: 3em;
}

@media screen and (max-width: 767px) {
  	#countryInfo {
		/*margin: 3em;*/
		padding: 3em;
		border-radius: 10px;
	}

	#top10 {
		text-align: center;
		margin-top: 0px;
	}
 }

 @media screen and (min-width: 768px) {
  	#map {
  		padding: none;
  		min-height: 500px;
  		margin-left: auto;
  		margin-right: auto;
  		width: 80%;
  		margin-top: 3em;
  		margin-bottom: 3em;
  	}

	#play, #song {
		margin-left: auto;
		margin-right: auto;
	}
}

/*@media screen and (min-width: 998px) {
  	#map {
  		min-height: 700px; 
  	}
 }*/

